--- a/Mastering spaCy clase 3 - Game, set, Matcher.ipynb
+++ b/Mastering spaCy clase 3 - Game, set, Matcher.ipynb
@@ -9,7 +9,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![spacy.jpg](attachment:spacy.jpg)"
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/NoeliaFerrero/NLP/blob/main/Mastering spaCy clase 1 - Objetos contenedores .ipynb)"
    ]
   },
   {
