--- a/prueba1.ipynb
+++ b/prueba1.ipynb
@@ -44,12 +44,12 @@
       },
       "source": [
         "\n",
-        "# Funciones\n",
-        "## Trabajo realizado con el apoyo del Programa UNAM-DGAPA-PAPIME PE101019\n",
+        "# Acceder a Colab desde GitHub\n",
+        "## Código realizado para acceder a Google Colaboratory desde GitHub\n",
         "\n",
         "*   Autor: \n",
         "    - Noelia Ferrero\n",
-        "*   Rev: sep 09 12:35:18 CDT 2022\n",
+        "*   Rev: sep 09 12:35:18 2022\n",
         "\n",
         "Este Colab puede ser usado libremente, por todas las personas que deseen complementar sus cursos y conocimientos en los temas antes mencionados.\n",
         "\n",
