--- a/prueba-acceder-colab.ipynb
+++ b/prueba-acceder-colab.ipynb
@@ -44,15 +44,14 @@
       },
       "source": [
         "\n",
-        "# Funciones\n",
-        "## Trabajo realizado con el apoyo del Programa UNAM-DGAPA-PAPIME PE101019\n",
+        "# Acceder a Colab\n",
+        "## Código realizado para acceder a Google Colaboratory desde GitHub\n",
         "\n",
-        "*   Autores: \n",
-        "    - José de Jesús Tapia López\n",
-        "    - Luis M. de la Cruz Salas\n",
-        "*   Rev: mar nov 10 12:35:18 CDT 2020\n",
+        "*   Autor: \n",
+        "    - Noelia Ferrero\n",
+        "*   Rev: Sep 09 12:35:18 2022\n",
         "\n",
-        "Este sitio puede ser usado libremente, tanto por profesores como por estudiantes, que deseen complementar sus cursos y conocimientos en los temas antes mencionados. Los materiales están bajo una Licencia Creative Commons Atribución-NoComercial-CompartirIgual 4.0 Internacional\n",
+        "Este código puede ser usado libremente, por todas las personas que deseen ejecutar en Colab, el código de un archivo JSOM\n",
         "\n",
         "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc-sa/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc-sa/4.0/\">Licencia Creative Commons Atribución-NoComercial-CompartirIgual 4.0 Internacional</a>."
       ]
