--- a/prueba-acceder-colab.ipynb
+++ b/prueba-acceder-colab.ipynb
@@ -51,7 +51,7 @@
         "    - Noelia Ferrero\n",
         "*   Rev: Sep 09 12:35:18 2022\n",
         "\n",
-        "Este código puede ser usado libremente, por todas las personas que deseen ejecutar en Colab, el código de un archivo JSOM\n",
+        "Este código puede ser usado libremente, por todas las personas que deseen ejecutar la sintaxis mostrada en un archivo JSOM, mediante Google Colab\n",
         "\n",
         "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc-sa/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc-sa/4.0/\">Licencia Creative Commons Atribución-NoComercial-CompartirIgual 4.0 Internacional</a>."
       ]
